// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkOverlay should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--solid-low"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with foregroundContent 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--solid-low"
    >
      <span>
        Skyscanner
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={bottom} & overlayLevel={high} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--bottom-high"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={bottom} & overlayLevel={low} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--bottom-low"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={bottom} & overlayLevel={medium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--bottom-medium"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={bottom} & overlayLevel={off} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--bottom-off"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={left} & overlayLevel={high} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--left-high"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={left} & overlayLevel={low} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--left-low"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={left} & overlayLevel={medium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--left-medium"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={left} & overlayLevel={off} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--left-off"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={right} & overlayLevel={high} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--right-high"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={right} & overlayLevel={low} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--right-low"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={right} & overlayLevel={medium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--right-medium"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={right} & overlayLevel={off} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--right-off"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={solid} & overlayLevel={high} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--solid-high"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={solid} & overlayLevel={low} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--solid-low"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={solid} & overlayLevel={medium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--solid-medium"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={solid} & overlayLevel={off} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--solid-off"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={top} & overlayLevel={high} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--top-high"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={top} & overlayLevel={low} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--top-low"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={top} & overlayLevel={medium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--top-medium"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={top} & overlayLevel={off} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--top-off"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={vignette} & overlayLevel={high} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--vignette"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={vignette} & overlayLevel={low} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--vignette"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={vignette} & overlayLevel={medium} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--vignette"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should render correctly with overlayType={vignette} & overlayLevel={off} 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--vignette"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper"
    testid="123"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--solid-low"
    />
  </div>
</DocumentFragment>
`;

exports[`BpkOverlay should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-overlay__wrapper custom-classname"
  >
    <span>
      Backpack
    </span>
    <div
      class="bpk-overlay__overlay bpk-overlay__overlay--solid-low"
    />
  </div>
</DocumentFragment>
`;
